# xiaomiao-desktop

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  workflow.yml
.github/workflows/: build.yml
main/: CMakeLists.txt  dock.c  idf_component.yml  main.c  return_to_loader.c  return_to_loader.h  tiles.c
main/app/: app_builtin.c  app_manager.c  app_manager.h  app_micropython.c
main/driver/: drv_backlight.c  drv_backlight.h  drv_battery.c  drv_battery.h  drv_button.c  drv_button.h
main/system/: sys_nvs.c  sys_nvs.h
main/ui/: ui_framework.c  ui_framework.h
